--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "url": "https://github.com/simeg/sudoku-js/issues"
   },
   "homepage": "https://github.com/simeg/sudoku-js#readme",
+  "dependencies": {
+    "cors": "2.8.5",
+    "express": "4.17.1",
+    "mustache-express": "1.2.8"
+  },
   "devDependencies": {
     "@babel/core": "7.5.5",
     "@babel/node": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "babel-jest": "24.8.0",
     "jest": "24.9.0",
-    "nodemon": "^1.19.2",
-    "prettier-eslint": "^9.0.0"
+    "nodemon": "1.19.2",
+    "prettier-eslint": "9.0.0"
   },
   "engines": {
     "node": "12.x"
